# nvc-net

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose-cpu.yml  docker-compose-gpu.yml  docker-compose-nodevice.yml  docker-compose.yaml  pyproject.toml  requirements.txt  setup.py
.docker/: Dockerfile.cpu  Dockerfile.gpu  Dockerfile.nnabla
nvcnet/model/: model.py
script/train/: 00001.sh
script/train/vc/: 00001.sh  test.sh
script/train/vctk/: 00001.sh
src/conf/: default.yaml
src/conf/dataset/: jvs.yaml  vc.yaml  vctk.yaml
src/conf/ml/: ml.yaml
src/conf/model/: nvcnet.yaml
src/dataset/: create_spk_list.py  setter.py
src/dataset/vc/: datamodule.py  dataset.py
src/dataset/vctk/: datamodule.py  dataset.py
src/model/: check_nnabla.py  nvcnet.py  nvcnetmodule.py  ops.py
src/train/: base.py  vctk.py
src/train/nvcnet/: 00001.py
src/train/nvcnet/vc/: 00001.py
src/train/nvcnet/vctk/: 00001.py
src/util/: audio.py  conf.py  ml.py
